--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Starbucks/.idea/jsLibraryMappings.xml
 Starbucks/.idea/vcs.xml
 Starbucks/public/templates/locations.html.orig
 environmental data.md
+
+Starbucks/public/images/coffee1.jpg
