controller to kong api code

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Starbucks/public/templates/locations.html.orig
 environmental data.md
 
 Starbucks/public/images/coffee1.jpg
+Starbucks/public/angularjs/StarbucksApp.js.orig
+Starbucks/public/templates/placeorder.html.orig
