--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "all": "0.0.0",
+    "angular": "^1.6.4",
+    "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "morgan": "^1.8.1",
-    "serve-favicon": "^2.4.2"
+    "express": "^4.14.1",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.2"
   }
 }
